# controllers/moviesController.js
@@ -2,10 +2,12 @@ const Movie = require('../models/movie');
 
 // Create
 const movie_create = (req, res) => {
+    /* #swagger.security = [{
+        "apiKeyAuth": []
+    }] */
     const movie = new Movie(req.body);
     movie.save().then(result => {
         res.send(result);
-        //res.redirect('/movies');
     }).catch(err => {
         console.log(err);
     });
@@ -13,6 +15,9 @@ const movie_create = (req, res) => {
 
 // Read
 const movie_list = (req, res) => {
+    /* #swagger.security = [{
+        "apiKeyAuth": []
+    }] */
     Movie.find().sort({ createdAt: -1 }).then(result => {
         res.send(result);
     }).catch(err => {
@@ -22,7 +27,10 @@ const movie_list = (req, res) => {
 
 // Update
 const movie_update = (req, res) => {
-    Movie.findByIdAndUpdate(req.body.id, req.body.update, {new: true}).then(result => {
+    /* #swagger.security = [{
+        "apiKeyAuth": []
+    }] */
+    Movie.findByIdAndUpdate(req.body.id, req.body.update, { new: true }).then(result => {
         res.status(200);
         res.send(result);
     }).catch(err => {
@@ -32,11 +40,13 @@ const movie_update = (req, res) => {
 
 // Delete
 const movie_delete = (req, res) => {
+    /* #swagger.security = [{
+        "apiKeyAuth": []
+    }] */
     const id = req.params.id;
     Movie.findByIdAndDelete(id).then(result => {
         res.status(201);
         res.send(result);
-        // res.redirect('/');
     }).catch(err => {
         console.log(err);
     });
